<resources>
    <string name="app_name">Metatate</string>
    <string name="playback_channel_name">Playback</string>
    <string name="playback_channel_description">Playback Descritpion</string>
    <string name="broadcast_seekbar_update">broadcast_seekbar_update</string>
    <string name="broadcast_seekbar_value">broadcast_seekbar_value</string>
    <string name="broadcast_update_ui">broadcast_update_ui</string>
    <string name="broadcast_new_media_id">broadcast_new_media_id</string>
    <string name="share_msg">Get the Metatate and take yourself where you belongs in this life. Allow us to help you changing your life forever through Metatate.</string>
    <string name="facebook_app_id">425471002147672</string>
    <string name="fb_login_protocol_scheme">fb425471002147672</string>
    <string name="base_url">http://budamind.ca-central-1.elasticbeanstalk.com/api/</string>
    <string name="str_yearly">Yearly</string>
    <string name="str_monthly">Monthly</string>
    <string name="str_manage_or_delete_your_subscription_by_clinking_here">Manage or Delete your subscription\nby clinking
    </string>
    <string name="str_welcome_to_clarity">Welcome to \nCLARITY</string>
    <string name="str_get_started">GET STARTED</string>
    <string name="str_choose_your_goals">Choose Your Goals</string>
    <string name="str_take_a_deep_breath_and_think_about_nwhat_is_bothering_you_at_the_moment">Take a deep breath and
        think about \nwhat would you like to work on.
    </string>
    <string name="str_reduce_stress">Reduce Stress</string>
    <string name="str_better_sleep">Better Sleep</string>
    <string name="str_improve_focus">Improve Focus</string>
    <string name="str_learn_to_meditate">Learn To Meditate</string>
    <string name="str_develop_gratitute">Develop Gratitude</string>
    <string name="str_reduce_anxiety">Reduce Anxiety</string>
    <string name="str_increase_happiness">Increase Happiness</string>
    <string name="str_build_self_esteem">Develop Self-Esteem</string>
    <string name="str_continue">CONTINUE</string>
    <string name="str_subscribe_now">SUBSCRIBE NOW</string>
    <string name="str_terms_condition">
        <u><![CDATA[Terms & Conditions]]></u>
    </string>
    <string name="str_by_using_clarity_you_agree_to_our1">By continuing, you are indicating that you </string>
    <string name="str_by_using_clarity_you_agree_to_our">accept our <b><u>Terms Of Service</u></b> and</string>
    <string name="str_by_using_privacy"><b><u> Privacy Policy</u></b>.</string>
    <string name="str_not_account"><u>Don\'t Have Account? <b><font color="#2F5B44">Sign Up</font></b></u></string>
    <string name="str_alredy_account"><u>Alredy  Have Account? <b><font color="#2F5B44">Sign In</font></b></u></string>
    <string name="str_sign_in">&#160;Sign In</string>
    <string name="str_have_an_account">Have an account ?&#160;</string>
    <string name="str_continue_with_email">Continue with Email</string>
    <string name="str_continue_with_google">Continue with Google</string>
    <string name="str_continue_with_facebook">Continue with Facebook</string>
    <string name="str_facebook">facebook</string>
    <string name="str_google">gmail</string>
    <string name="str_something_went_wrong">Something went wrong</string>
    <string name="str_check_internet_connection">Check internet connection</string>
    <string name="str_first_name">First Name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_email_address">Email Address</string>
    <string name="str_password">Password</string>
    <string name="str_re_enter_password">Re-enter Password</string>
    <string name="str_sign_up">&#160;Sign Up</string>
    <string name="str_or">or</string>
    <string name="str_don_t_have_account">Don\'t have account ?</string>
    <string name="str_reset_your_password">Reset Your Password?</string>
    <string name="str_forgot_password">Forgot Password?</string>
    <string name="str_forgot_password_without_que">Forgot Password</string>
    <string name="str_monthly_plan">MONTHLY PLAN</string>
    <string name="str_4_99">$60.99</string>
    <string name="str_per_month">per year*</string>
    <string name="str_free_trail">after FREE\n7-DAY trial</string>
    <string name="str_per_year">per year*</string>
    <string name="str_yearly_plan">YEARLY PLAN</string>
    <string name="str_try_7_days_for_free">Try 7 Days for Free</string>
    <string name="str_subscribe_clarity">Unlock Metatate</string>
    <string name="str_home">Home</string>
    <string name="str_library">Library</string>
    <string name="str_task">Tasks</string>
    <string name="str_sound">Sounds</string>
    <string name="str_catalog">Catalog</string>
    <string name="str_profile">Profile</string>
    <string name="str_private_key"><u>Show Private Key</u></string>
    <string name="separator">/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_ready_to_begin">Ready to begin?</string>
    <string name="str_success">success</string>
    <string name="str_login_successfully">Login Successfully</string>
    <string name="str_otp_sent">OTP Sent Successfully</string>
    <string name="str_enter_valid_email">Enter valid email</string>
    <string name="str_email">email</string>
    <string name="str_enter_password">Please enter password</string>
    <string name="str_enter_old_password">Please enter old password</string>
    <string name="str_enter_first_name">Enter first name</string>
    <string name="str_enter_last_name">Enter last name</string>
    <string name="str_possword_does_not_match">Password doesn\'t match</string>
    <string name="str_longest_nsteak">Longest\nStreak</string>
    <string name="str_total_sessions">Total\nSessions</string>
    <string name="str_mindfulness_minutes">Metatate \nMinutes"</string>
    <string name="str_share_your_status">Share Your Status</string>
    <string name="str_unlock_clarity_premium">Unlock Metatate Premium</string>
    <string name="str_downloads">Downloads</string>
    <string name="str_mindfulness_reminders">Metatate Reminder</string>
    <string name="str_push_notification">Push Notification</string>
    <string name="str_change_password">Change Password</string>
    <string name="str_terms_of_use">Terms Of Use</string>
    <string name="str_privacy_of_use">Privacy Policy</string>
    <string name="str_logout">Logout</string>
    <string name="str_course_are_short_guided_meditation_that_will_nhelp_you_during_day_to_day_activities">
        "\"Unlock yourself and guided meditation courses\nwhile improving your wellbeing\""
    </string>
    <string name="str_moments_are_short_guided_meditation_that_will_nhelp_you_during_day_to_day_activities">
        "\"Short guided meditations that help with \nday to day activities\""
    </string>
    <string name="str_choosing_a_soothing_music_to_unwind_and_ease_into_life">"\"Choosing a soothing music to unwind and
        ease into life.\""
    </string>
    <string name="str_corse">Courses</string>
    <string name="str_moment">Moments</string>
    <string name="str_loading">Loading...</string>
    <string name="str_try_your_first_course">Try Your First Course</string>
    <string name="str_download_all_session">Download All Session</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_set_new_password">Set New Password</string>
    <string name="testing">Learn from yesterday, live for today, hope for tomorrow. The important thing is not to stop
        questioning.
    </string>
    <string name="str_meditation_for_you">Recommended For You</string>
    <string name="str_daily_features">Daily Meditation</string>
    <string name="str_daily_task">Daily Tasks</string>
    <string name="str_minutes_meditated">Minutes Meditated</string>
    <string name="str_current_streak">Current Streak</string>
    <string name="str_save">Save</string>
    <string name="download_path">/data/data/</string>
    <string name="str_delete_a_file">Delete a file.</string>
    <string name="str_yes">Yes</string>
    <string name="str_delete_all_file">Delete all files</string>
    <string name="str_unlock_the_clarity_library">Unlock The Metatate Library</string>
    <string name="str_improve_sleep_enhance_focus_and_boost_nyour_quality_of_life_by_practicing_mindfulness_daily">
        Improve sleep, enhance focus, and boost\nyour quality of life by practicing\nMetatate daily.
    </string>
    <string name="str_set_your_reminder_time">Set your reminder time</string>
    <string name="str_mindfulness_reminder">Metatate Reminders</string>
    <string name="str_get_reminder">Get Reminder</string>
    <string name="notification">Metatate Reminder</string>
    <string name="str_stop">STOP</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="str_reminder">Reminder</string>
    <string name="str__moment">Moment</string>
    <string name="str_notifications">Notifications</string>
    <string name="str_receive">Receive Metatate</string>
    <string name="str_share">Share</string>
    <string name="str_share_quote">Share Quote</string>
    <string name="str_course">Course</string>
    <string name="str_your_subscription_is_active">Your Subscription is active</string>
    <string name="str_subscription_type">Subscription type:</string>
    <string name="str_subscription_date">Subscription Date:</string>
    <string name="str_next_renewal">Next Renewal:</string>
    <string name="str_email_info">Email: info@clarity.com</string>
    <string name="str_invalid_token">invalid_token</string>
    <string name="str_old_password">Old Password</string>
    <string name="str_new_password">New Password</string>
    <string name="str_password_changed">Password changed</string>
    <string name="str_meditate_with_clarity_to_relax_and_improve_your_physical_and_mental_performance">Meditate with
        Metatate to relax and improve your physical and mental performance
    </string>
    <string name="str_100_guided_meditations_for_everything_from_improving_focus_and_performance_relieving_anxiety_and_stress_and_getting_better_sleep">
        100+ guided meditations for everything from improving focus and performance, relieving anxiety and stress, and
        getting better sleep
    </string>
    <string name="str_exclusive_soundtracks_for_focus_relaxation_and_sleep">Exclusive soundtracks for Focus, Relaxation,
        and Sleep
    </string>
    <string name="str_add_mindfulness_and_refocus_in_even_the_most_packed_days_with_our_mini_meditations">Add
        mindfulness and refocus in even the most packed days with our mini meditations
    </string>
    <string name="str_clarity_otp">Metatate OTP</string>
    <string name="str_password_recovery">Password Recovery</string>
    <string name="str_cancel_anytime_billed_annually">*Cancel anytime. Billed annually</string>
    <string name="str_by_continuing_you_accept_our">By continuing you accept our</string>
    <string name="str_8_00_am">8:00 AM</string>
    <string name="str_repeat_course">Repeat Course</string>
    <string name="str_begin_course">Begin Course</string>
    <string name="str_please_enter_the_otp_number_below_which_you_have_received_through_email">Please enter the OTP
        number below\nwhich you have received\nthrough email.
    </string>
    <string name="str_please_accept_tems">Please accept terms and condition.</string>
    <string name="str_please_enter_first_name">Please enter your first name</string>
    <string name="str_please_enter_last_name">Please enter your last name</string>
    <string name="enter_your_email_id_so_that_we_can_send_you_notp_to_recover_your_password">Enter your email id so that
        we can send you\nOTP to recover your password
    </string>
    <string name="str_continue_course">Continue Course</string>
    <string name="str__moments">Moments</string>
    <string name="str_sounds">Sounds</string>
</resources>