<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/selector_bottom_view_home"
            android:title="@string/str_home"/>

    <item
            android:id="@+id/navigation_library"
            android:icon="@drawable/selector_bottom_view_library"
            android:title="@string/str_library"/>

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/selector_bottom_view_track"
        android:title="@string/str_task"/>

    <item
            android:id="@+id/navigation_catalog"
            android:icon="@drawable/selector_bottom_view_sound"
            android:title="@string/str_catalog"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/selector_bottom_view_profile"
            android:title="@string/str_profile"/>

</menu>
