<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.getyoteam.budamind.activity.ReminderActivity">

    <RelativeLayout
        android:id="@+id/actonBar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/ivHeaderLeft"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitosans_bold"
            android:gravity="center"
            android:text="@string/str_notifications"
            android:textColor="@color/color_white"
            android:textSize="@dimen/_18sdp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/actonBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_100sdp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_reminder" />

            <TextView
                style="@style/TextRegular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:text="@string/str_improve_sleep_enhance_focus_and_boost_nyour_quality_of_life_by_practicing_mindfulness_daily"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/nunitosans_regular"
                android:gravity="center"
                android:text="@string/str_set_your_reminder_time"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_14sdp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_alarm_clock" />

                <TextView
                    android:id="@+id/tvTime"
                    style="@style/TextBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:gravity="center"
                    android:text="@string/str_8_00_am"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/_30sdp" />

                <Switch
                    android:id="@+id/swSaveReminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/SCBSwitch"
                    android:thumbTint="@color/colorPrimary"
                    android:trackTint="@color/colorPrimaryLight" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_5sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_5sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/nunitosans_bold"
                        android:gravity="start"
                        android:text="@string/str_get_reminder"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/_20sdp" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/tvCountinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/selected_state"
        style="@style/TextBold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_save"
        android:textAllCaps="true"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_16sdp"
        android:visibility="gone" />
</RelativeLayout>