<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/color_white"
        android:layout_height="match_parent"
        tools:context="com.getyoteam.budamind.activity.LoginWithSocialActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="@dimen/_150sdp"
                    android:src="@drawable/logo_splash"/>
            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"/>
            <com.facebook.login.widget.LoginButton
                    android:id="@+id/defaultLoginButtonFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_70sdp"
                    android:background="@drawable/ic_button_background_facebook"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvSignUpFacebook"
                        android:text="@string/str_continue_with_facebook"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/nunitosans_bold"
                        android:padding="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_facebook"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>
                <ProgressBar
                        android:id="@+id/progressBarFacebook"
                        android:layout_width="wrap_content"
                        android:visibility="invisible"
                        android:paddingEnd="@dimen/_20sdp"
                        style="@android:style/Widget.ProgressBar.Small"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:indeterminateDrawable="@drawable/progress"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/ic_button_background_google"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvSignUpGoogle"
                        android:text="@string/str_continue_with_google"
                        android:layout_width="match_parent"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/nunitosans_bold"
                        android:padding="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_google"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>

                <ProgressBar
                        android:id="@+id/progressBarGoogle"
                        android:layout_width="wrap_content"
                        android:visibility="invisible"
                        android:paddingEnd="@dimen/_20sdp"
                        style="@android:style/Widget.ProgressBar.Small"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:indeterminateDrawable="@drawable/progress"
                        android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/selected_state"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/tvSignUpEmail"
                        android:text="@string/str_continue_with_email"
                        android:layout_width="match_parent"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_16sdp"
                        android:fontFamily="@font/nunitosans_bold"
                        android:padding="@dimen/_10sdp"
                        android:paddingStart="@dimen/_140sdp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/_10sdp"
                        android:textColor="@android:color/white"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"/>
            </RelativeLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:layout_marginTop="@dimen/_20sdp"
                          android:layout_height="wrap_content"
                          android:layout_gravity="center"
                          android:orientation="horizontal">
                <TextView
                        android:text="@string/str_have_an_account"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/nunitosans_semibold"
                        android:textColor="@color/color_black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tvSignIn"
                        android:text="@string/str_sign_in"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_14sdp"
                        android:fontFamily="@font/nunitosans_semibold"
                        android:textColor="@color/color_blue"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:layout_marginTop="@dimen/_40sdp"
                          android:layout_height="wrap_content"
                          android:visibility="gone"
                          android:layout_gravity="center"
                          android:orientation="horizontal">
                <TextView
                        android:text="@string/str_by_using_clarity_you_agree_to_our"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunitosans_regular"
                        android:textColor="@color/color_black"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:id="@+id/tvTermsCondi"
                        android:text="@string/str_terms_condition"
                        android:layout_width="wrap_content"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/nunitosans_regular"
                        android:textColor="@color/color_black"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>